[package]
name = "bly"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
description = "Rusty fast cross-platform 2D drawing library"
repository = "https://github.com/Lattexshz/Bly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.0"

log = "0.4.17"
env_logger = "0.10.0"

bly-ac = { path = "../backends/bly-ac" ,version = "0.1.0" }

[target."cfg(windows)".dependencies]
windows = {version = "0.38.0", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]}

[target."cfg(unix)".dependencies]
bly-cairo = { path = "../backends/bly-cairo" ,version = "0.1.0" }

[dev-dependencies]
winit = "0.28.1"