[package]
name = "bly"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
description = "Rusty fast cross-platform 2D drawing library"
repository = "https://github.com/Lattexshz/Bly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.5.0"

log = "0.4.17"
env_logger = "0.10.0"

once_cell = "1.17.1"

[target."cfg(windows)".dependencies]
windows = {version = "0.38.0", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]}

[target."cfg(unix)".dependencies]
cairo-sys-rs = { version = "0.17.0", features = ["xlib"] }
x11 = "2.21.0"

wayland-client = "0.29.1"
wayland-egl = "0.29.0"

khronos-egl = { version = "4.1.0",features = ["static"] }

[dev-dependencies]
winit = "0.28.1"
console_log = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1.12"
log = "0.4"
serde = { version = "1", features = ["serde_derive"] }
raw-window-handle = "0.5.0"
bitflags = "1"
mint = { version = "0.5.6" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3.22", package = "web-sys",features = [
    'console',
    "AddEventListenerOptions",
    'CssStyleDeclaration',
    'BeforeUnloadEvent',
    'Document',
    'DomRect',
    'Element',
    'Event',
    'EventTarget',
    'FocusEvent',
    'HtmlCanvasElement',
    'HtmlElement',
    'KeyboardEvent',
    'MediaQueryList',
    'MediaQueryListEvent',
    'MouseEvent',
    'Node',
    'PointerEvent',
    'Window',
    'WheelEvent'
] }

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.45"
