[package]
name = "bly-ac"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
description = "Crate for common back-end processing and other variables."
repository = "https://github.com/Lattexshz/Bly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
