[package]
name = "bly-cairo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xlib = [ "cairo-rs/xlib" ]
wayland = [ ]

[dependencies]
bly-ac = { path = "../bly-ac" }

cairo-rs = { version = "0.17.0", features = ["xlib","freetype"] }
x11 = "2.21.0"