[package]
name = "bly-cairo"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
description = "Cairo backend for Bly"
repository = "https://github.com/Lattexshz/Bly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bly-ac = { path = "../bly-ac",version = "0.1.0" }

cairo-sys-rs = { version = "0.17.0", features = ["xlib"] }
x11 = "2.21.0"