[package]
name = "bly-dx2d"
version = "0.1.0"
edition = "2021"
authors = ["Lattexshz"]
description = "Direct2D backend for Bly"
repository = "https://github.com/Lattexshz/Bly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bly-ac = { path = "../bly-ac",version = "0.1.0" }

[target."cfg(windows)".dependencies]
windows = {version = "0.38.0", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]}

[dev-dependencies]
winit = "0.28.1"